--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node.js runtime as the base image
-FROM node:slim
+FROM node:20.5.1-slim
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
