--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mongodb": "^6.5.0",
     "mongoose": "^7.6.9",
     "nodemon": "^2.0.22"
   }
