--- a/book_store/Dockerfile
+++ b/book_store/Dockerfile
@@ -21,7 +21,7 @@ FROM nginx:alpine
 
 # Copy the built React application to the Nginx server directory
 COPY --from=build /app/build /usr/share/nginx/html
-
+COPY nginx.conf /etc/nginx/nginx.conf
 # Expose port 80 to the outside world
 EXPOSE 80
 
