--- a/k8s/backend-deployment.yml
+++ b/k8s/backend-deployment.yml
@@ -1,5 +1,3 @@
-# deployment.yaml
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-node-backend
-          image: anmol040/simple-node-app
+          image: anmol040/node-backend:1.4
           ports:
             - containerPort: 5000
           resources:
@@ -24,4 +22,9 @@ spec:
               memory: "256Mi" # Request 256 MB of memory
             limits:
               memory: "512Mi" # Limit to 512 MB of memory
-
+          env:
+          - name: MONGO_URL
+            valueFrom:
+              secretKeyRef:
+                name: backend-secret
+                key: mongo-url
